--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite",
     "webpack",
     "rollup",
+    "rolldown",
     "transform"
   ],
   "exports": {
@@ -60,6 +61,11 @@
     "./types": {
       "import": "./dist/types.js",
       "require": "./dist/types.cjs"
+    },
+    "./rolldown": {
+      "types": "./dist/rolldown.d.ts",
+      "import": "./dist/rolldown.js",
+      "require": "./dist/rolldown.cjs"
     },
     "./*": "./*"
   },
@@ -112,6 +118,9 @@
     "esbuild": {
       "optional": true
     },
+    "rolldown": {
+      "optional": true
+    },
     "rollup": {
       "optional": true
     },
@@ -124,27 +133,28 @@
   },
   "dependencies": {
     "magic-string": "^0.30.17",
-    "unplugin": "^2.1.2",
-    "unplugin-copy": "^2.1.0"
+    "unplugin": "^2.3.4",
+    "unplugin-copy": "^3.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.14.0",
-    "@nuxt/kit": "^3.15.2",
-    "@nuxt/schema": "^3.15.2",
-    "@types/node": "^22.10.7",
+    "@antfu/eslint-config": "^4.13.2",
+    "@nuxt/kit": "^3.17.4",
+    "@nuxt/schema": "^3.17.4",
+    "@types/node": "^22.15.21",
     "@types/serve-static": "^1.15.7",
-    "bumpp": "^9.10.1",
+    "bumpp": "^10.1.1",
     "chalk": "^5.4.1",
-    "eslint": "^9.18.0",
+    "eslint": "^9.27.0",
     "esno": "^4.8.0",
     "fast-glob": "^3.3.3",
-    "nodemon": "^3.1.9",
-    "rollup": "^4.31.0",
-    "taze": "^18.2.0",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.3",
-    "vite": "^5.4.13",
-    "vitest": "^3.0.2",
-    "webpack": "^5.97.1"
+    "nodemon": "^3.1.10",
+    "rolldown": "^1.0.0-beta.9",
+    "rollup": "^4.41.1",
+    "taze": "^19.1.0",
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.4",
+    "webpack": "^5.99.9"
   }
 }
